--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -2,11 +2,80 @@
 
 
 {% block content %}
+{% load static %}
 <!--Introduction section-->
-<div class="container pt-3 my-3">
+<!--<div class="container pt-3 my-3">
 	<div class="row">
-		<div class="col"><h1 class="text-center">Song page!</h1></div>
-	</div>
+		<div class="col"><h2 class="text-center">Song page!</h2></div>
+	</div> -->
+
+
+<div class="card-header">
+  <div class="card">
+  <div class="card-header">
+    Song Title - {{song.name}}
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Information about this song </h5>
+    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+
+</p>
+    
+  </div>
+</div>
+
+<br/>
+  <div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Music Notation notes</h5>
+        <p class="card-text">Below you will find music notation on - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Song details and further links</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text">ID: {{song.id}}</p>
+		<p class="card-text">Description: {{song.description}}</p>
+		<p class="card-text">Date: {{song.created_date}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<br/> <br/>
+
+
+
+<img src="{% static 'images/music-test.png' %}" class="rounded mx-auto d-block" alt="...">
+
+<br/>
+</div>
+<!--
 	<div class="row">
 		<div class="col overridep">
 			<p class="text-center">
@@ -21,7 +90,7 @@
 					<a href="{% url 'product_edit' id=product.id %}" class="btn btn-secondary">Edit</a>
 					<a href="{% url 'product_delete' id=product.id %}" class="btn btn-secondary">Delete</a>
 					{% endif %} -->
-				</div>
+	<!--			</div>
 			    </center>
 
 				<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non egestas magna. Mauris nisl sapien, ullamcorper quis cursus sit amet, tincidunt eu mi. Donec gravida porttitor eleifend. Aliquam et neque et ligula porta ultricies. Praesent mattis leo a arcu malesuada bibendum. Phasellus a risus quis ante ultrices mollis. Proin rutrum venenatis augue sit amet lobortis. Cras tristique nisl justo, nec pellentesque neque varius ut. Nullam dapibus leo maximus, semper nisi nec, interdum erat. Fusce nisi felis, interdum at neque eu, lacinia sollicitudin erat. Aliquam blandit tincidunt sollicitudin. Phasellus sem turpis, interdum a lorem gravida, pulvinar sagittis eros.</div><br>
@@ -30,5 +99,5 @@
 			</p>
 		</div>
 	</div>
-</div>
+</div> -->
 {% endblock %}
