--- a/static/style.css
+++ b/static/style.css
@@ -88,8 +88,36 @@ background-color: #222;
 height: 60px;
 }
 /*modifies the footer section (jumbotron class)  */
-footer p{
+.footer p{
 margin-top: 15px;
 font-family: 'Courier New', Courier, monospace; 
 font-size: 30px;
 color: white; 
+}
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: rgb(232, 232, 232);
+  border: 1px solid black;
+  padding: 30px;
+  margin-bottom: 150px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 5px solid black;
+  text-align: center;
+  font-size: 25px;
+}
+
+.card-home{
+  align-items: center;
+}
+
+.btn-home{
+  width: 100px;
+  margin-bottom: 10px;
+}
