--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -37,9 +37,10 @@
                 <a class="nav-link" href="#">Link</a>
             </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Song.." aria-label="Search">
-          <button class="btn btn-dark" type="submit">Submit</button>
+        <form class="d-flex" method=POST action="{% url 'search' %}">
+            {% csrf_token %}
+          <input class="form-control me-2" type="search" placeholder="Search Songs" aria-label="Search" name="searched">
+          <button class="btn btn-dark" type="submit">Search</button>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if user.is_authenticated %}
               <li class="nav-item">
