--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -65,11 +65,11 @@
   {% endblock %}
 
   <!--Footer-->
-    <footer>
+    <!--<footer>
       <div class="jumbotron fixed-bottom footer">
         <p>Team Alpha</p>
       </div>
-    </footer>
+    </footer>-->
 
   <!-- Optional JavaScript; choose one of the two! -->
 
