--- a/folksongs/templates/signup.html
+++ b/folksongs/templates/signup.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="row center" id="card-test">
+ <div class="col-sm-6">
+ <div class="card">
 <div class="container pt-3 my-3">
   <div class="row">
     <div class="col"><h1 class="text-center">Registration</h1></div>
@@ -29,4 +32,8 @@
     </div>
   </div>
 </div>
+</div>
+</div>
+</div>
+
 {% endblock %}
