--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -3,17 +3,13 @@
 
 {% block content %}
 {% load static %}
-<!--Introduction section-->
-<!--<div class="container pt-3 my-3">
-	<div class="row">
-		<div class="col"><h2 class="text-center">Song page!</h2></div>
-	</div> -->
 
+<!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
 
 <div class="card-header">
   <div class="card">
   <div class="card-header">
-    Song Title - {{song.name}}
+     Song Title - {{song.name}} 
   </div>
   <div class="card-body">
     <h5 class="card-title">Information about this song </h5>
@@ -52,6 +48,8 @@
       </div>
     </div>
   </div>
+
+
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
@@ -70,34 +68,11 @@
 <br/> <br/>
 
 
-
+<div class="card" style="padding: 20px;">
 <img src="{% static 'images/music-test.png' %}" class="rounded mx-auto d-block" alt="...">
+</div>
 
 <br/>
 </div>
-<!--
-	<div class="row">
-		<div class="col overridep">
-			<p class="text-center">
-				<center>
-				<div class="card-body">
-					<h4 class="card-title">{{song.name}}</h4>
-					<br>
-					<p class="card-text">ID: {{song.id}}</p>
-					<p class="card-text">Description: {{song.description}}</p>
-					<p class="card-text">Date: {{song.created_date}}</p>
-					<!-- {% if user.is_staff %}
-					<a href="{% url 'product_edit' id=product.id %}" class="btn btn-secondary">Edit</a>
-					<a href="{% url 'product_delete' id=product.id %}" class="btn btn-secondary">Delete</a>
-					{% endif %} -->
-	<!--			</div>
-			    </center>
 
-				<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non egestas magna. Mauris nisl sapien, ullamcorper quis cursus sit amet, tincidunt eu mi. Donec gravida porttitor eleifend. Aliquam et neque et ligula porta ultricies. Praesent mattis leo a arcu malesuada bibendum. Phasellus a risus quis ante ultrices mollis. Proin rutrum venenatis augue sit amet lobortis. Cras tristique nisl justo, nec pellentesque neque varius ut. Nullam dapibus leo maximus, semper nisi nec, interdum erat. Fusce nisi felis, interdum at neque eu, lacinia sollicitudin erat. Aliquam blandit tincidunt sollicitudin. Phasellus sem turpis, interdum a lorem gravida, pulvinar sagittis eros.</div><br>
-
-				<div>Aliquam lobortis iaculis tellus vitae dapibus. Vivamus accumsan, mauris posuere feugiat ornare, nibh justo accumsan velit, eget molestie tortor nunc nec nulla. Aenean sit amet suscipit est. Phasellus efficitur rutrum vestibulum. Curabitur faucibus mi non tellus lacinia euismod. Nam nec urna dapibus, tempor erat vel, ornare lectus. Maecenas dictum posuere nisl, ut porta massa. Donec a nisi a est vulputate ultrices. Fusce placerat placerat nibh vitae semper. Morbi ullamcorper risus libero, ut condimentum odio condimentum nec.</div><br>
-			</p>
-		</div>
-	</div>
-</div> -->
 {% endblock %}
