--- a/folksongs/templates/signup.html
+++ b/folksongs/templates/signup.html
@@ -1,37 +1,35 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 
-<div class="row center" id="card-test">
- <div class="col-sm-6">
+<!-- code adpated from - https://getbootstrap.com/docs/5.0/layout/containers/-->
+<div class="container" id="reg-container" style="margin:auto;">
  <div class="card">
-<div class="container pt-3 my-3">
-  <div class="row">
-    <div class="col"><h1 class="text-center">Registration</h1></div>
-  </div>
-  <div class="row">
-    <div class="col overridep">
-      <form method="post" > 
-        {% csrf_token %}
-        {% for field in form %}
-        <p>
-          {{ field.label_tag }}<br>
-          {{ field }}
-          {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
-          {% endif %}
-          {% for error in field.errors %}
-          <p style="color: red">{{ error}} </p>
-          {% endfor %}
-        </p>
-        {% endfor %}
-        <input type="submit" name="Sign Up"/>
-      </form>
-
+  <div class="container pt-3 my-3">
+    <div class="row">
+      <div class="col"><h1 class="text-center">Registration</h1></div>
+    </div>
+      <div class="row">
+        <div class="col overridep">
+          <form method="post" > 
+            {% csrf_token %}
+            {% for field in form %}
+            <p>
+              {{ field.label_tag }}<br>
+              {{ field }}
+              {% if field.help_text %}
+              <small style="color: grey">{{ field.help_text }}</small>
+              {% endif %}
+              {% for error in field.errors %}
+            <p style="color: red">{{ error}} </p>
+            {% endfor %}
+           </p>
+            {% endfor %}
+              <input type="submit" name="Sign Up"/>
+          </form>
       <br><br>
-
     </div>
   </div>
-</div>
 </div>
 </div>
 </div>
