refined code on song page, added border continuity, added relevant styles to style sheet

--- a/folksongs/templates/registration/login.html
+++ b/folksongs/templates/registration/login.html
@@ -5,7 +5,7 @@
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
 
 <div class="container">
-  <div class="row" style="margin-left: 450px;">
+  <div class="row" style="" id="login-style">
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
