adjusting writing and bolding titles

--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -9,7 +9,7 @@
   <div class="card-header" id="bTest">
     <div class="card">
       <div class="card-header">
-     Song Title - {{song.name}} 
+     <b>Song Title - {{song.name}} </b>
   </div>
       <div class="card-body">
         <h5 class="card-title">Information about this song </h5>
@@ -36,7 +36,7 @@
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Music Notation notes</h5>
+            <h5 class="card-title"> <b>Music Notation notes</b></h5>
             <p class="card-text">Below you will find music notation on - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -49,7 +49,7 @@
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Song details and further links</h5>
+            <h5 class="card-title"><b>Song details and further links</b></h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text">ID: {{song.id}}</p>
             <p class="card-text">Description: {{song.description}}</p>
