changing home and song pages with new models, adding carousel

--- a/folksongs/templates/home.html
+++ b/folksongs/templates/home.html
@@ -10,8 +10,8 @@
 		{% for song in songs %}
 
 		<div class="card card-home">
-			<div class="card-header"><b>{{song.id}}</b> {{song.name}}</div>
-			<div class="card-body">{{song.description}}</div>
+			<div class="card-header"><b>ID: {{song.songID}}</b> <br> <b>Titles:</b> <br>{{song.songName}}</div>
+			<div class="card-body"><b>Authors:</b> <br>{{song.songAuthor}}</div>
 			<a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
 			<div class="card-footer">{{song.created_date}}</div>
 			<img class="card-img-bottom" src="/static/imgGleb/music.png" alt="hmm" style="width:100%">
