--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -4,67 +4,88 @@
 {% block content %}
 {% load static %}
 
+
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
 <div class="container">
   <div class="card-header" id="bTest">
     <div class="card">
       <div class="card-header">
-     <b>Song Title - {{song.name}} </b>
-  </div>
-      <div class="card-body">
-        <h5 class="card-title">Information about this song </h5>
-        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+       <b>Song Title - {{song.songID}} </b> <br>
+     </div>
+     <div class="card-body">
+      <h5 class="card-title">Information about this song </h5>
+      <p class="card-text">  
+        <b>Titles: </b> {{song.songName}} <br>
+        <b>Authors: </b> {{song.songAuthor}}
 
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-
-</p>
-      </div>
+      </p>
     </div>
-    <br/>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title"> <b>Music Notation notes</b></h5>
-            <p class="card-text">Below you will find music notation on - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title"><b>Song details and further links</b></h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text">ID: {{song.id}}</p>
-            <p class="card-text">Description: {{song.description}}</p>
-            <p class="card-text">Date: {{song.created_date}}</p>
-          </div>
+  </div>
+  <br/>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"> <b>Music Notation notes</b></h5>
+          <p class="card-text">Below you will find music notation on - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
     </div>
-    <br/>
-    <br/>
-    <div class="card" style="padding: 20px;">
-      <img style="border: solid black 1px;" src="{% static 'images/music-test.png' %}" class="rounded mx-auto d-block" alt="...">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b>Song details and further links</b></h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">ID: {{song.id}}</p>
+          <p class="card-text">Description: {{song.description}}</p>
+          <p class="card-text">Date: {{song.created_date}}</p>
+        </div>
       </div>
-      <br/>
     </div>
   </div>
+  <br/>
+  <br/>
+
+  
+  <!-- Slideshow container -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/2.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/3.png' %}" alt="First slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+
+
+
+</div>
+</div>
 
 {% endblock %}
+
+<!-- src="{% static 'songs/3.png' %}" -->
