--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -10,7 +10,7 @@
   <div class="card-header" id="bTest">
     <div class="card">
       <div class="card-header">
-       <b>Song Title - {{song.songID}} </b> <br>
+       <b><h1>Song ID - {{song.songID}} </h1></b>
      </div>
      <div class="card-body">
       <h5 class="card-title">Information about this song </h5>
@@ -58,16 +58,52 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1.png' %}" alt="First slide">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/1.png' %}" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/2.png' %}" alt="First slide">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/2.png' %}" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/3.png' %}" alt="First slide">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/3.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/4.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/5.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/6.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/7.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/8.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/9.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/10.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/11.png' %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 h-50" src="{% static 'songs/1516/12.png' %}" alt="First slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
