--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -69,8 +69,8 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/1.png' %}" alt="First slide">
+          <div class="carousel-item active"> {{song.image}}
+            <img class="d-block w-100 h-50" src="{{song.image}}" alt="First slide"> 
           </div>
           <div class="carousel-item">
             <img class="d-block w-100 h-50" src="{% static 'songs/1516/2.png' %}" alt="First slide">
