--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -56,6 +56,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}?next=/"">Login</a>
               </li>
+              <li class="nav-item">
+                <a href="{% url 'song_add' %}" class="btn btn-secondary">Add...</a>
+              </li>
               {% endif %}
         </ul>
     </form>
