--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -7,6 +7,8 @@
 
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
 <div class="container">
+
+  <div> <img src="{{ song.image }}"></div>
   <div class="card-header" id="bTest">
     <div class="card">
       <div class="card-header">
@@ -69,7 +71,7 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active"> {{song.image}}
+          <div class="carousel-item active">
             <img class="d-block w-100 h-50" src="{{song.image}}" alt="First slide"> 
           </div>
           <div class="carousel-item">
