working on media

--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -46,6 +46,9 @@
           <p class="card-text">ID: {{song.id}}</p>
           <p class="card-text">Description: {{song.description}}</p>
           <p class="card-text">Date: {{song.created_date}}</p>
+<!--           {% for img in images %}
+          <img src="{{img.urls.url}}" alt="Image">
+          {% endfor %} -->
         </div>
       </div>
     </div>
