--- a/folksongs/templates/song_add.html
+++ b/folksongs/templates/song_add.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Adding a new song</h1>
-    <form method="POST" enctype="multipart/form-data"> 
+    <form method="POST" enctype="multipart/form-data">
+        <!-- <input type="file" name="images" multiple> -->
       {% csrf_token %}
       {{ form.media }}
       {{ form.as_p}}
