--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -7,6 +7,7 @@
 
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
 <div class="container">
+
   <div class="card-header" id="bTest">
     <div class="card">
       <div class="card-header">
@@ -44,84 +45,36 @@
           <p class="card-text">ID: {{song.id}}</p>
           <p class="card-text">Description: {{song.description}}</p>
           <p class="card-text">Date: {{song.created_date}}</p>
-<!--           {% for img in images %}
-          <img src="{{img.urls.url}}" alt="Image">
-          {% endfor %} -->
         </div>
       </div>
     </div>
   </div>
   <br/>
   <br/>
-  <div><img src="{{song.image.url}}" alt="Image"> {{song.created_date}}</div>
-  <!-- Slideshow container -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/1.png' %}" alt="First slide"> 
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/2.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/3.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/4.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/5.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/6.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/7.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/8.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/9.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/10.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/11.png' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 h-50" src="{% static 'songs/1516/12.png' %}" alt="First slide">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+
+
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      {% for i in images%}
+      <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0 %} active {% endif %}"></li>
+      {% endfor %}
+    </ol>
+    <div class="carousel-inner">
+      {% for i in images%}
+      <div class="carousel-item {% if forloop.counter0 == 0 %} active {% endif %}">
+        <img class="d-block w-100" src="{{i.image.url}}" alt="Second slide">
       </div>
-
-
-
-
-</div>
+      {% endfor %}
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
