--- a/static/style.css
+++ b/static/style.css
@@ -125,3 +125,21 @@ color: white;
   margin-left: 450px;
 }
 
+
+div.gallery {
+  border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
