--- a/folksongs/templates/registration/login.html
+++ b/folksongs/templates/registration/login.html
@@ -3,11 +3,11 @@
 
 
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
-
+<body style="background: rgb(255,255,240, 0.6);">
 <div class="container">
-  <div class="row" style="" id="login-style">
+  <div class="row" style="padding-left:400px ;">
     <div class="col-sm-6">
-      <div class="card">
+      <div class="card" style="border: solid 1px gold;">
         <div class="card-body">
           <h5 class="card-title">Login</h5>
           <p class="card-text">
@@ -54,6 +54,7 @@
   </div>
 
 </div>
+</body>
   
 
 {% endblock %}
