--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 
-
-{% block content %}
 {% load static %}
 
 
-<!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
-<div class="container">
+{% block content %}
 
-  <div class="card-header" id="bTest">
+
+<!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
+<body style="background: rgb(255,255,240, 0.6);">
+<div class="container" style="background: white;">
+
+  <div class="card-header" id="bTest" style="border: solid 1px gold;">
     <div class="card">
       <div class="card-header">
        <b><h1>Song ID - {{song.songID}} </h1></b>
@@ -76,7 +78,7 @@
     </div>
   </div>
 </div>
-
+</body>
 {% endblock %}
 
 <!-- src="{% static 'songs/3.png' %}" -->
