--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -7,7 +7,8 @@
 
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-      <link rel="stylesheet" type="text/css" href="/static/style.css">  
+      {% load static %}
+      <link href="{% static 'style.css' %}" type="text/css" rel="stylesheet">  
 
       <title>The Greig-Duncan Folk Song Collection </title>
       <link rel="aberdeen icon" href="/static/images/aberdeen.png">
@@ -17,9 +18,8 @@
 
       <!--Header-->
       <header class="jumbotron header1">
-        <img src="/static/images/aberdeen-logo.png" style="float: left; width: 20%;"> 
-       <h1 style="padding-right: 175px;">The Greig-Duncan Folk Song Collection</h1>
-       <p style="padding-right: 175px;"> University of Aberdeen </p> 
+       <img src="/static/images/aberdeen-logo.png" class="logo"> 
+       <h1>The Greig-Duncan Folk Song Collection</h1>
      </header>
      <!--Navigation panel-->
      <nav class="navbar sticky-top navbar-expand-lg nav" style="background: navy; color: white;">
@@ -46,19 +46,19 @@
             <button class="btn" type="submit" style="background: gold;">Search</button>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if user.is_authenticated %}
-              <li class="nav-item">
+   <!--            <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
-              </li>
-              <li class="nav-item">
+              </li> -->
+            <!--   <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}?next=/" style="color: white;">LogOut</a>
-              </li>
+              </li> -->
               {% else %}
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}?next=/" style="color: white;">Login</a>
               </li>
               <li class="nav-item">
                 <a href="{% url 'song_add' %}" class="btn btn-secondary" style="color: white;">Add...</a>
-              </li>
+              </li> -->
               {% endif %}
             </ul>
           </form>
