--- a/folksongs/templates/home.html
+++ b/folksongs/templates/home.html
@@ -37,20 +37,18 @@
   </div>
 
 </br></br> 
-
-
-<div class="container">
+<div class="container wrap">
   {% for song in songs %}
-  <div class="card"  style="width: 18rem;" >
+  <div class="card serv" >
       <img class="card-img-top" src="static/images/music-test.png" alt="Card image cap" >
       <div class="card-body">
         <h5 class="card-title"><b>{{song.songName}}</b></h5>
         <div class="card-body"><b>Authors:</b> <br> {{song.songAuthor}} </div>
         <a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
       </div>
-    </div>
-  </br></br> 
+  </br></br>
   {% endfor %}
+</div>
 </div>
 </body>
 {% endblock %}
