--- a/static/style.css
+++ b/static/style.css
@@ -96,7 +96,7 @@ color: white;
 }
 
 
-/*.grid-container {
+.grid-container {
   display: grid;
   grid-template-columns:auto auto auto auto;
   grid-gap: 10px;
@@ -111,7 +111,7 @@ color: white;
   border: 1px solid black;
   text-align: center;
   font-size: 25px;
-}*/
+}
 
 
 
@@ -128,7 +128,6 @@ color: white;
 
 .card-home{
   width: 200px;
-  height: 400px;
 }
 
 .btn-home{
