updating cards and css on home page

--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -12,7 +12,7 @@
       <link href="{% static 'style.css' %}" type="text/css" rel="stylesheet">  
 
       <title>The Greig-Duncan Folk Song Collection </title>
-      <link rel="aberdeen icon" href="/static/images/aberdeen.png">
+      <link rel="aberdeen icon" href="/static/images/aberdeen.png" style="border-radius: 5px;">
 
     </head>
     <body>
