--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -13,12 +13,11 @@
     <div class="card-header" id="bTest" style="border: solid 1px gold;">
       <div class="card">
         <div class="card-header">
-         <b><h1>Song ID - {{song.songID}} </h1></b>
+         <b><h1>Song Title: {{song.songName}} </h1></b>
        </div>
        <div class="card-body">
         <h5 class="card-title">Information about this song </h5>
         <p class="card-text">  
-          <b>Titles: </b> {{song.songName}} <br>
           <b>Authors: </b> {{song.songAuthor}}
 
         </p>
@@ -44,9 +43,8 @@
           <div class="card-body">
             <h5 class="card-title"><b>Song details and further links</b></h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text">ID: {{song.id}}</p>
             <p class="card-text">Description: {{song.description}}</p>
-            <p class="card-text">Date: {{song.created_date}}</p>
+            <p class="card-text">Date Created: {{song.created_date}}</p>
           </div>
         </div>
       </div>
