--- a/folksongs/templates/home.html
+++ b/folksongs/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% load static %}
 <!--Introduction section-->
-<body style="background: rgb(255,255,240, 0.6);">
+<body class="bodyBackground">
 
 <div class="container">
 <div class="card">
@@ -84,19 +84,42 @@
 
 <!-- <div class="container"> -->
 	<!-- <div class="col"><h1 class="text-center">Welcome!</h1></div> -->
+<div class="container">
+<div class="grid-container">
+  {% for song in songs %}
+<div class="card">
+  <img class="card-img-top" src="/static/images/music-test.png" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{song.songName}}</h5>
+    <p class="card-text"> Authors: {{song.songAuthor}} </p>
+    <a href="{% url 'song' id=song.id %}" class="btn btn-warning">View Song</a>
+  </div>
+</div>
+{% endfor %}
+</div>
+</div>
 
-
-
+<!--
+<div class="container">
 	<div class="grid-container">
 		{% for song in songs %}
 		<div class="card card-home">
 			<div class="card-header"><b>ID: {{song.songID}}</b> <br> <b>Titles:</b> <br>{{song.songName}}</div>
 			<div class="card-body"><b>Authors:</b> <br> {{song.songAuthor}} </div>
 			<a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
-			<div class="card-footer">{{song.created_date}}</div>
-			<img class="card-img-bottom" src="{% static 'songs/1516/12.png' %}" alt="hmm" style="width:100%">
 		</div>
-		{% endfor %}
-	</div>
+		{% endfor %}%
+</div>
 </div>
 {% endblock %}
+
+-->
+
+
+
+
+
+
+
+
+
