--- a/static/style.css
+++ b/static/style.css
@@ -98,19 +98,16 @@ color: white;
 
 .grid-container {
   display: grid;
-  grid-template-columns:auto auto auto auto;
+  grid-template-columns:auto auto auto auto auto;
   grid-gap: 10px;
-  background-color: rgb(232, 232, 232);
-  border: 1px solid black;
-  padding: 30px;
-  margin-bottom: 150px;
+  background-color: white;
+  justify-content: center;
 }
 
 .grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid black;
+  background-color: white;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 
@@ -121,10 +118,6 @@ color: white;
   padding-left: 0;
 }
 
-.serv{
-  list-style: none;
-  flex: 0 0 32.333333%;
-}
 
 .card-home{
   width: 200px;
@@ -135,6 +128,7 @@ color: white;
 .btn-home{
   width: 100px;
   margin-bottom: 10px;
+  background-color: royalblue;
 }
 
 
@@ -150,3 +144,8 @@ color: white;
   float: left;
 
 }
+
+.bodyBackground{
+  background: rgb(255,255,240, 0.6);
+}
+
