--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -18,9 +18,9 @@
     <body>
 
       <!--Header-->
-      <header class="jumbotron header1">
+      <header class="jumbotron header1 xtext">
        <img src="/static/images/aberdeen-logo.png" class="logo"> 
-       <h1>The Greig-Duncan Folk Song Collection</h1>
+       <h1 class="xtext">The Greig-Duncan Folk Song Collection</h1>
      </header>
      <!--Navigation panel-->
      <nav class="navbar sticky-top navbar-expand-lg nav" style="background: navy; color: white;">
