--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -19,7 +19,8 @@
         <h5 class="card-title">Information about this song </h5>
         <p class="card-text">  
           <b>Titles: </b> {{song.songName}} <br>
-          <b>Authors: </b> {{song.songAuthor}}
+          <b>Authors: </b> {{song.songAuthor}} <br>
+          <b>Volume: </b> {{song.songVolume}} <br>
 
         </p>
       </div>
