--- a/static/style.css
+++ b/static/style.css
@@ -155,3 +155,14 @@ color: white;
   background: rgb(255,255,240, 0.6);
 }
 
+
+/*code adapted from - https://www.benmarshall.me/max-character-length-ellipsis-css/  */
+.limitText {
+  overflow: hidden;
+  max-width: 75ch;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  
+
+
+}
