--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -23,7 +23,7 @@
        <h1 class="xtext">The Greig-Duncan Folk Song Collection</h1>
      </header>
      <!--Navigation panel-->
-     <nav class="navbar sticky-top navbar-expand-lg nav" style="background: navy; color: white;">
+     <nav class="navbar sticky-top navbar-expand-lg nav">
       <div class="container-fluid" style="color: white;">
         <a class="navbar-brand" href="{% url 'home' %}" style="color: white;">The Greig-Duncan Folk Song Collection</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,31 +32,33 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 linksList">
             <li class="nav-item">
-              <a class="nav-link linkElement" href="#" style="color: white;"> Collections </a>
+              <a class="nav-link linkElement" href="#"> Collections </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" style="color: white;"> Songs </a>
+              <a class="nav-link" href=""> Songs </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" style="color: white;"> Admin </a>
+              <a class="nav-link" href="https://stark-mesa-89039.herokuapp.com/admin/"> Admin </a>
             </li>
           </ul>
           <form class="d-flex" method=POST action="{% url 'search' %}">
             {% csrf_token %}
-            <input class="form-control me-2" type="search" placeholder="Search Songs" aria-label="Search" name="name">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                filters
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <input class="form-control me-2 searchField" type="search" placeholder="Search Songs" aria-label="Search" name="name">
+
+            <!-- Example split danger button -->
+            <div class="btn-group">
+            <button type="button" class="btn dropdown-toggle dropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
+              Filters
+            </button>
+              <ul class="dropdown-menu">
                 <br>
                 <input class="form-control me-2" type="search" placeholder="Search Volumes" aria-label="Search" name="volume">
                 <br>
                 <input class="form-control me-2" type="search" placeholder="Search Author" aria-label="Search" name="author">
                 <br>
               </ul>
-            </li>
-            <button class="btn" type="submit" style="background: gold;">Search</button>
+            </div>
+            <button class="btn searchButton" type="submit">Search</button>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if user.is_authenticated %}
    <!--            <li class="nav-item">
@@ -95,11 +97,5 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-  -->
-</body>
-</html>
+  </body>
+  </html>
