Set S3 Amazon, all static and media files stored on Amazon

--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -12,14 +12,14 @@
       <link href="{% static 'style.css' %}" type="text/css" rel="stylesheet">  
 
       <title>The Greig-Duncan Folk Song Collection </title>
-      <link rel="aberdeen icon" href="/static/images/aberdeen.png" style="border-radius: 5px;">
+      <link rel="aberdeen icon" href="{% static 'imgs/aberdeen.png' %}" style="border-radius: 5px;">
 
     </head>
     <body>
 
       <!--Header-->
       <header class="jumbotron header1 xtext">
-       <img src="/static/images/aberdeen-logo.png" class="logo"> 
+       <img src="{% static 'imgs/aberdeen-logo.png' %}" class="logo"> 
        <h1 class="xtext">The Greig-Duncan Folk Song Collection</h1>
      </header>
      <!--Navigation panel-->
