--- a/folksongs/templates/home.html
+++ b/folksongs/templates/home.html
@@ -44,7 +44,7 @@
 <div class="grid-container">
   {% for song in songs %}
 <div class="card">
-  <img class="card-img-top" src="/static/images/music-test.png" alt="Card image cap">
+  <img class="card-img-top" src="{% static 'imgs/music-test.png' %}" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title limitText">{{song.songName}}</h5>
     <p class="card-text limitText"> Authors: {{song.songAuthor}} </p>
